--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="/style.css">
   </head>
   <body>
-    <h1 class="text-center">Hello, world!</h1>
+    <h1 class="text-center">Dice Calculator</h1>
 
     <section id="dieButtonContainer">
         <div class="container">
